# IC

./: .coveragerc  .gitattributes  .gitconfig  .gitignore  .lfsconfig  .travis.yml  228Th_10evt_hits.h5  CITATION.cff  CONTRIBUTING.md  README.rst  bash_manage.sh  conftest.py  create-migration-clone.sh  db_download.sh  env.sh  environment-IC-3.8-2024-06-08.yml  environment.yml  icompile.py  ipynb_drop_output  lfs.md  manage.sh  migrate-branch-to-lfs.sh  pyproject.toml  pytest.ini  readme.md  setup.py  shell.nix  step1.sh  step2.txt  step3.txt  step4.sh
.github/workflows/: check_db_calibration.yml  coverage.yml  test_linux_arm.yml  test_macos_arm.yml  test_suite.yml
Cities/: DIOMIRA.py  IRENE.py
Config/: IRENE.conf
Core/: Bridges.py  Configure.py  LogConfig.py  Nh5.py  RandomSampling.py  coreFunctions.py  mplFunctions.py  npFunctions.py  peakFunctions.py  pmapsFunctions.py  system_of_units.py  tblFunctions.py  wfmFunctions.py  wfmFunctions_test.py
Database/: download.py  loadDB.py
ICython/Core/: peakFunctions.pyx  pmapsFunctions.pxd  pmapsFunctions.pyx  system_of_units.pyx
ICython/Sierpe/: BLR.pyx  cBLR.pyx
Sierpe/: FEE.py  FEE_test.py
doc/: Makefile  cities.rst  commits.rst  conf.py  contributing.rst  core.rst  ic_authors_and_legal.rst  index.rst  init.el  merging.rst  notebooks.rst
invisible_cities/: conftest.py
invisible_cities/Cities/: IRENE.py  cities.py  diomira_ms.py  diomira_ms_run.py  diomira_test.py
invisible_cities/Config/: diomira_ms.conf
scripts/: check_warnings  setup_conda_gha.sh
tests/: ic_Kr_tests_pmaps.h5  test_db.py
(+720 files in other folders)
